syntax = "proto3";

package pb;

enum MessageID {
    UNKNOW_MessageID = 0;

    A2C_REGISTER_APP = 10;
    GT2C_ON_CLIENT_ACCEPT = 11;
    GT2C_ON_CLIENT_CLOSE = 12;
    GT2C_CLIENT_RPC_CALL = 13;
    GT2C_CLIENT_RPC_PUSH = 14;
    C2GT_PUSH_CLIENT = 15;
    L2C_REPORT_RPC = 16;
    G2C_PLAYER_LOGIN = 17;
    PLAYER_LOGIN_DONE = 18;
    C2L_KICK_OUT_PLAYER = 19;
    L2L_CALL_AGENT = 20;
    L2L_PUSH_AGENT = 21;
    L2CL_PUSH_CLIENT = 22;
    L2C_SET_DISPATCH = 23;
    L2L_NO_PLAYER_RPC_CALL = 24;
    L2L_NO_PLAYER_RPC_PUSH = 25;
    C2GT_BROADCAST_CLIENT = 26;
    C2L_RESTORE_AGENT = 27;
    LOAD_PLAYER = 28;
    DEL_CLIENT_DISPATCH_INFO = 29;
    C2GT_CLIENT_SET_FILTER = 30;
    C2GT_CLIENT_CLEAR_FILTER = 31;
    L2C_MQ_PUBLISH = 32;
    L2C_MQ_ADD_CONSUMER = 33;
    L2C_MQ_REMOVE_CONSUMER = 34;
    C2L_MQ_CONSUME = 35;
    GT2C_ON_SNET_DISCONNECT = 36;
    GT2C_ON_SNET_RECONNECT = 37;
    L2L_NO_PLAYER_BROADCAST = 38;
    L2C_BEGIN_HOT_FIX = 39;
    END_MONITOR_PLAYER = 40;
    L2C_PLAYER_LOGOUT = 41;
}